changed project notebook to export clean dataset to csv for collaboration. added folder QuestionFernando

--- a/Electric Cars Poyect.ipynb
+++ b/Electric Cars Poyect.ipynb
@@ -17,9 +17,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "7e95a8f7",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -174,9 +172,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "ba0a10fc",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -207,9 +203,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "4ec7b687",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -346,9 +340,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "987cad29",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -509,8 +501,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "777c0d9b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "23af4390",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Saved clean DATASET to CSV in project REPO for collaboration\n",
+    "clean_ecar_df = ecar_df.copy()\n",
+    "clean_ecar_df.to_csv('clean_ecar_dataset.csv', index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a0e465f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -532,7 +544,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
